--- a/pom.xml
+++ b/pom.xml
@@ -82,5 +82,6 @@
 	<module>gerenciadorproduto</module>
      <module>padaria</module>
     <module>caixa</module>
+    <module>acougue</module>
   </modules>
 </project>
