Comentario no pom do projeto pai

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
     <module>gerenciadorpadaria</module>
     <module>gerenciadorcaixa</module>
    -->
+   <!-- inclusao do modulo acougue -->
  <modules>  
 	<module>gerenciadorproduto</module>
      <module>padaria</module>
