--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
-
+	
+<!--Mapeamento das dependencias mavem  -->
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
