--- a/caixa/pom.xml
+++ b/caixa/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>gerenciadesupermercado</artifactId>
     <groupId>br.com.gerenciadesupermercado</groupId>
     <version>1.0-SNAPSHOT</version>
+    <relativePath>./pom.xml</relativePath>
   </parent>
 
   <groupId>br.com.caixa</groupId>
@@ -17,17 +18,12 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+   
   </dependencies>
 
   <build>
