--- a/caixa/.project
+++ b/caixa/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gerenciadorproduto</name>
+	<name>caixa</name>
 	<comment></comment>
 	<projects>
 	</projects>
