--- a/acougue/pom.xml
+++ b/acougue/pom.xml
@@ -12,7 +12,7 @@
   <groupId>br.com.acougue</groupId>
   <artifactId>acougue</artifactId>
   <version>1.0-SNAPSHOT</version> 
-  
+  <packaging>jar</packaging>
 
   <name>acougue</name>
   <!-- FIXME change it to the project's website -->
