--- a/caixa/pom.xml
+++ b/caixa/pom.xml
@@ -11,6 +11,7 @@
   <groupId>br.com.caixa</groupId>
   <artifactId>caixa</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>caixa</name>
   <!-- FIXME change it to the project's website -->
