--- a/padaria/pom.xml
+++ b/padaria/pom.xml
@@ -10,6 +10,8 @@
   <groupId>br.com.padaria</groupId>
   <artifactId>padaria</artifactId>
   <version>1.0-SNAPSHOT</version>
+  
+  <packaging>jar</packaging>
 
   <name>padaria</name>
   <!-- FIXME change it to the project's website -->
