--- a/gerenciadorproduto/src/main/resources/application.properties
+++ b/gerenciadorproduto/src/main/resources/application.properties
@@ -8,6 +8,10 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 #drop n create table again, good for testing, comment this in production
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql=true
+
+#Mudanca de apontamento da porta
+server.port=8082
+
